fixed home image

--- a/index.html
+++ b/index.html
@@ -251,39 +251,33 @@
   </script>
 
     <script type="text/x-handlebars" id="index">
-      <div id="homepage">
+      <div id="wrapper">
+        <div class="container-fluid">
+          <div class="clearfix"></div>
+            <div class="row-fluid">
+              <div class="col-md-2"></div>
+              <div class="col-md-4">
+                <div id="home-text">
+                  <h2>The Most Important Things In Life <i>Aren't Things</i></h2>
+                  <h4><i>~Author Unknown</i></h4>
+                    <ul class="fa-ul">
+                      <li><i class="fa-li fa fa-star-o fa-lg"></i>Discover what is most important to you right now</li>
+                      <li><i class="fa-li fa fa-thumbs-o-up fa-lg"></i>Find ways to have more of that in your life</li>
+                      <li><i class="fa-li fa fa-smile-o fa-lg"></i>Get resources to acheive your goals</li>
+                    </ul>
 
-
-          <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-5">
-
-              <div class="spacer-sm"></div>
-              <div class="spacer-sm"></div>
-              <h1>The Most Important Things In Life <i>Aren't Things</i></h1>
-              <div id="test">
-                <ul class="fa-ul">
-                  <li><i class="fa-li fa fa-star-o fa-lg"></i>Discover what is most important to you right now</li>
-                  <li><i class="fa-li fa fa-thumbs-o-up fa-lg"></i>Find ways to have more of that in your life</li>
-                  <li><i class="fa-li fa fa-smile-o fa-lg"></i>Get resources to acheive your goals</li>
-                </ul>
+                    <section class="color-41">
+                      <nav class="cl-effect-8">
+                        <a href="#/things/new" style="color: #354856;" data-hover="Get Started">Get Started <i class="fa fa-chevron-right"></i></a>
+                      </nav>
+                    </section>
+                  </div>
               </div>
-              <section class="color-41">
-                <nav class="cl-effect-8">
-                  <a href="#/things/new" style="color: #354856;" data-hover="Get Started">Get Started <i class="fa fa-chevron-right"></i></a>
-                </nav>
-              </section>
-              <div class="spacer-sm"></div>
-              <div class="spacer-sm"></div>
+              <div class="col-md-6"></div>
               <div class="spacer-sm"></div>
               <div class="spacer-sm"></div>
             </div>
-            <div class="col-md-5">
-
-            </div>
-            <div class="col-md-1"></div>
-          </div>
-      
+        </div>
       </div>
   </script>
 
