--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<meta name="author" content="Michelle Marin: Frontend Developer + Web Designer" />
 	<link rel="shortcut icon" href="styleguide/favicon.ico">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/component.css">
   <link rel="stylesheet" href="css/demo.css">
   <link rel="stylesheet" href="css/set2.css">
@@ -18,6 +17,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -268,14 +268,16 @@
 
                     <section class="color-41">
                       <nav class="cl-effect-8">
-                        <a href="#/things/new" style="color: #354856;" data-hover="Get Started">Get Started <i class="fa fa-chevron-right"></i></a>
+                          <a href="#/things/new" data-hover="Get Started">Get Started <i class="fa fa-chevron-right"></i></a>
                       </nav>
                     </section>
+                    <div class="spacer-sm"></div>
+                    <div class="spacer-sm"></div>
+                    <div class="spacer-sm"></div>
+                    <div class="spacer-sm"></div>
                   </div>
               </div>
               <div class="col-md-6"></div>
-              <div class="spacer-sm"></div>
-              <div class="spacer-sm"></div>
             </div>
         </div>
       </div>
