--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       {{#with thing}}
       <figure class="effect-ming">
         <img {{bind-attr src=image }} />
-        <figcaption>
+        <figcaption class="tint">
           <h2> {{title}} </h2>
           <h6> {{categoryName}} </h6>
           {{#if isLoggedIn}}
@@ -181,7 +181,7 @@
             <div class="col-md-7">
               <figure class="effect-ming" style="width: 100%;" >
                 <img {{bind-attr src=image }} style="width: 100%;"/>
-              <figcaption>
+              <figcaption class="tint">
               <h2>
                 {{#link-to "thing" this }}  {{title}} {{/link-to}}
               </h2>
@@ -207,7 +207,7 @@
               {{#each}}
                   <figure class="effect-ming">
                     <img {{bind-attr src=image }} />
-                    <figcaption {{action "upvote" this }} >
+                    <figcaption {{action "upvote" this }} class="tint">
                       <h2>
                         {{title}}
                       </h2>
@@ -257,6 +257,7 @@
             <div class="row-fluid">
               <div class="col-md-2"></div>
               <div class="col-md-4">
+                <div id="homewrap">
                 <div id="home-text">
                   <h2>The Most Important Things In Life <i>Aren't Things</i></h2>
                   <h4><i>~Author Unknown</i></h4>
