--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
       </article>
     </div>
   </div>
+  <footer>
+    <div class="container-fluid">
+      <div id="footer-text">
+        <ul>
+          <li>© 2014 My Top Seven Things</li>
+          <li>Brand Style Guide</li>
+          <li>Colophon</li>
+          <li>Contact Us</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
   </script>
 
