--- a/index.html
+++ b/index.html
@@ -157,9 +157,21 @@
             {{yield}}
           {{/if}}
           {{outlet}}
-        {{/with}}
+
           </figcaption>
         </figure>
+          <div class="resources">
+          <h2>Resources</h2>
+            <h4>To help you acheive your goals.</h4>
+            <p>(Related to the category you picked for this top thing.)</p>
+
+            <ul class="fa-ul">
+              {{#each resource in resources}}
+                <li>{{resource.url}}&nbsp;<i class="fa fa-external-link"></i></li>
+              {{/each}}
+             </ul>
+          </div>
+        {{/with}}
       </div>
     </script>
 
@@ -172,7 +184,9 @@
                 <li><button class="btn btn-danger" {{action "destroy" }}><i class="fa fa-trash"></i>&nbsp;Delete</button></li>
               </ul>
             </nav>
+
           {{/thing-detail}}
+
           <nav class="cl-effect-88">
             <ul>
               <li><a href="#/things/new" data-hover="Add New"><i class="fa fa-plus"></i>&nbsp;Add New</a></li>
