--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </article>
     </div>
   </div>
-  <footer>
+  <footer class="footer navbar-fixed-bottom">
     <div class="container-fluid">
       <div id="footer-text">
         <ul>
@@ -256,8 +256,9 @@
                 <li>If you said yes, vote on "a".</li>
                 <li>If not, vote on "b".</li>
               </ul>
-
             </div>
+            <div class="spacer-sm"></div>
+            <div class="spacer-sm"></div>
         </div>
         <div class="col-md-2"></div>
       </div>
