--- a/index.html
+++ b/index.html
@@ -163,38 +163,51 @@
         </div>
         <div class="col-md-6">
           <div class="resources">
-          <h2>Resources</h2>
-            <h4>To help you acheive your goals.</h4>
-            <p>(Related to the category you picked for this top thing.)</p>
-            <ul class="fa-ul">
-              {{#each resource in resources}}
-                <li><a target="_blank" {{bind-attr href="resource.url"}}>{{resource.rname}}&nbsp;<i class="fa fa-external-link"></i></a></li>
-              {{/each}}
-             </ul>
-          </div>
-          <nav class="cl-effect-88">
-            <ul>
-              <li><a href="#/things/new" data-hover="Add New"><i class="fa fa-plus"></i>&nbsp;Add New</a></li>
-              <li><a href="#/results" data-hover="Back to Results"><i class="fa fa-thumb-tack"></i>&nbsp;Back to Results</a></li>
-            </ul>
-          </nav>
-          <div class="spacer-sm"></div>
-          <div class="spacer-sm"></div>
+            <nav class="cl-effect-88">
+              <h2>Resources</h2>
+                <h4>To help you acheive your goals.</h4>
+                <ul class="fa-ul">
+                  {{#each resource in resources}}
+                    <li><a target="_blank" {{bind-attr href="resource.url"}}>{{resource.rname}}&nbsp;<i class="fa fa-external-link"></i></a></li>
+                  {{/each}}
+                 </ul>
+            </nav>
+            {{/with}}
         </div>
-        {{/with}}
       </div>
-     </div>
+    </div>
+      <div class="clearfix"></div>
+        <div class="row-fluid">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <nav class="cl-effect-88">
+              <ul>
+                <li><a href="#/things/new" data-hover="Add New"><i class="fa fa-plus"></i>&nbsp;Add New</a></li>
+                <li><a href="#/results" data-hover="Back to Results"><i class="fa fa-thumb-tack"></i>&nbsp;Back to Results</a></li>
+              </ul>
+            </nav>
+            <div class="spacer-sm"></div>
+            <div class="spacer-sm"></div>
+         </div>
+         <div class="col-md-2"></div>
+        </div>
+
     </script>
 
     <script type="text/x-handlebars" id="thing">
       <div class="container-fluid">
           {{#thing-detail thing=this}}
-            <nav class="cl-effect-8">
-              <ul class="mobile">
-                <li class="shrink-mobile">{{link-to "Edit" "edit_thing" this }}</li>
-                <li><button class="btn btn-danger" {{action "destroy" }}><i class="fa fa-trash"></i>&nbsp;Delete</button></li>
+            <nav class="cl-effect-89">
+             <ul>
+                <li>
+                  {{link-to "Edit" "edit_thing" this }}
+                </li>
+                <li>
+                  <a href="#/results" {{action "destroy" }} style="color: #D9534F;"><i class="fa fa-times"></i>&nbsp;Delete</a>
+                </li>
               </ul>
             </nav>
+
           {{/thing-detail}}
       </div>
     </script>
@@ -338,6 +351,7 @@
   <script src="js/libs/ember-data.js"></script>
   <script src="js/libs/marked.js"></script>
   <script src="js/libs/modernizr.custom.js"></script>
+  <script src="js/libs/localstorage_adapter.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/emberfire/1.3.1/emberfire.min.js"></script>
   <script src="js/app.js"></script>
