changed home page text

--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
                   <h2>The Most Important Things In Life <i>Aren't Things</i></h2>
                   <h4><i>~Author Unknown</i></h4>
                     <ul class="fa-ul">
-                      <li><i class="fa-li fa fa-star-o fa-lg"></i>Discover what is most important to you right now</li>
-                      <li><i class="fa-li fa fa-thumbs-o-up fa-lg"></i>Find ways to have more of that in your life</li>
-                      <li><i class="fa-li fa fa-smile-o fa-lg"></i>Get resources to acheive your goals</li>
+                      <li><i class="fa-li fa fa-star-o fa-lg"></i>Prioritize what is most important to you</li>
+                      <li><i class="fa-li fa fa-thumbs-o-up fa-lg"></i>Have clarity on what you care about</li>
+                      <li><i class="fa-li fa fa-smile-o fa-lg"></i>Get resources to help acheive your goals</li>
                     </ul>
 
                     <section class="color-41">
