--- a/index.html
+++ b/index.html
@@ -317,26 +317,31 @@
             <div class="row-fluid">
               <div class="col-md-2"></div>
               <div class="col-md-4">
-                <div id="homewrap">
+               <div id="homewrap">
                 <div id="home-text">
-                  <h2>The Most Important Things In Life <i>Aren't Things</i></h2>
-                  <h4><i>~Author Unknown</i></h4>
-                    <ul class="fa-ul">
-                      <li><i class="fa-li fa fa-star-o fa-lg"></i>Prioritize what is most important to you</li>
-                      <li><i class="fa-li fa fa-thumbs-o-up fa-lg"></i>Have clarity on what you care about</li>
-                      <li><i class="fa-li fa fa-smile-o fa-lg"></i>Get resources to help acheive your goals</li>
-                    </ul>
-
-                    <section class="color-41">
-                      <nav class="cl-effect-8">
-                          <a href="#/things/new" data-hover="Get Started">Get Started <i class="fa fa-chevron-right"></i></a>
-                      </nav>
-                    </section>
+                  <div id="homeback">
+                    <h2>The Most Important Things In Life <i>Aren't Things</i></h2>
+                    <h4><i>~Anthony J. D'Angelo</i></h4>
+                      <ul class="fa-ul">
+                        <li><i class="fa-li fa fa-star-o fa-lg"></i>Prioritize what is most important to you</li>
+                        <li><i class="fa-li fa fa-thumbs-o-up fa-lg"></i>Have clarity on what you care about</li>
+                        <li><i class="fa-li fa fa-smile-o fa-lg"></i>Get resources to help acheive your goals</li>
+                      </ul>
+                      <section class="color-41">
+                        <nav class="cl-effect-89">
+                            <a href="#/things/new" data-hover="Get Started">Get Started <i class="fa fa-chevron-right"></i></a>
+                        </nav>
+                      </section>
+                  </div>
+                    <div class="spacer-sm"></div>
+                    <div class="spacer-sm"></div>
+                    <div class="spacer-sm"></div>
                     <div class="spacer-sm"></div>
                     <div class="spacer-sm"></div>
                     <div class="spacer-sm"></div>
                     <div class="spacer-sm"></div>
                   </div>
+                 </div>
               </div>
               <div class="col-md-6"></div>
             </div>
